Revamp for GR Dev Day, add stats, tweak call to action

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
+		<title>Creating a Safe Space</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="author" content="Aisha Blake">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -46,14 +46,19 @@
 					## Embracing Diversity in the Workplace
 				</section>
 
-				<section data-markdown>
-					## My name is Aisha
+				<section>
+					<section data-markdown>
+						## My name is Aisha
 
-					- Front-end web developer
-					- Teacher of adults and children alike
-					- Co-organizer of GDI Detroit
-					- Dog enthusiast
-					- Coding boot camp instructor
+						- Front-end web developer
+						- Dog enthusiast
+					</section>
+					<section data-markdown>
+						### I Teach People
+
+						![GDI](img/gdi.png)
+						![Grand Circus](img/gc.png)
+					</section>
 				</section>
 
 				<section>
@@ -84,7 +89,7 @@
 				<section data-markdown>
 					## A note on communities
 
-					A lot of the numbers I'll mention are related to women and POC, but the strategies we'll discuss will benefit everyone!
+					The numbers I'll mention are related to women and POC, but the strategies we'll discuss will benefit everyone!
 				</section>
 
 				<section data-markdown>
@@ -153,8 +158,58 @@
 					We all have biases, but it's easier to attribute bad behaviors to bad people than to take responsibility for our part in the system.
 				</section>
 
-				<section data-markdown>
+				<section>
+					<section data-markdown>
+						## Exercise!
+					</section>
+					<section data-markdown>
+						### Instructions
 
+						1. Pair up with someone close by.
+						2. For 30 seconds, one person will speak and the other will listen while maintaining steady eye contact, but not necessarily trying to focus on the speaker’s words.
+							- (Try to speak softly so that everyone can hear their partner!)
+						3. When I call time, switch roles. Now the speaker will listen and vice versa.
+					</section>
+					<section data-markdown>
+						### Debrief
+
+						- Was it difficult to avoid focusing on the speaker’s words?
+						- Why might that be (or not)?
+						- As the speaker, how did knowing the other person wasn’t really paying attention affect you?
+						- Did it have any bearing on what you chose to say?
+						- Did you feel any discomfort?
+						- How can we apply this experience to interactions in the workplace?
+
+					</section>
+				</section>
+
+				<section data-markdown>
+					## So What Can We Do?
+				</section>
+
+				<section>
+					<section data-markdown>
+						## Identify Your Biases
+
+						This is a long process, but it begins with each of us as individuals!
+					</section>
+					<section data-markdown>
+						### Have a Plan
+
+						It's natural to get defensive when people start talking about _your_ biases, but this is an opportunity to affect change. Instead:
+
+						- Stop
+						- Breathe
+						- Apologize
+						- Ask
+					</section>
+					<section data-markdown>
+						### Don't Be Afraid
+
+						Yes, you may say something offensive.
+
+						It's important to remember that marginalized people do not owe you this conversation.
+					</section>
 				</section>
 
 				<section>
@@ -164,12 +219,36 @@
 						<li>Recruitment</li>
 						<li>Onboarding</li>
 						<li>Culture</li>
+						<li>Feedback</li>
 						<li>Responding to bias</li>
 					</ul>
 
 					<aside class="notes">
 						How are you bringing in more diverse candidates? Why are you doing it? Are there knowledge gaps? Who feels like "one of the group"? Who benefits? Who gets left out? Are you placing the burden/blame on the victim?
 					</aside>
+				</section>
+
+				<section>
+					<section data-markdown>
+						## Support Pipeline Organizations
+
+						This is a multi-pronged discussion. We have to work to make our industry hospitable to marginalized people, but we also have to address inequalities in earlier stages.
+					</section>
+					<section data-markdown>
+						### Get 'Em Young
+
+						![Cristo Rey](img/cr.png)
+					</section>
+					<section data-markdown>
+						### Bootcamps
+
+						This model can be extremely effective, but students tend to be pretty homogenous. Programs like Grand Circus and Hackbright Academy are working to improve this.
+					</section>
+					<section data-markdown>
+						### Leadership
+
+						It's wonderful that we're making this education more accessible, but we have to prepare people for careers in tech that could lead to leadership roles.
+					</section>
 				</section>
 
 				<section>
@@ -185,7 +264,24 @@
 							- Respectful
 							- Mutually beneficial
 					</section>
+					<section data-markdown>
+						### AlterConf
 
+						![AlterConf](img/alter.png)
+					</section>
+					<section data-markdown>
+						### Trans*H4CK
+
+						![Trans*H4CK](img/trans.png)
+					</section><section data-markdown>
+						### Girl Develop It
+
+						![Girl Develop It](img/wordmark-tagline-white.png)
+					</section><section data-markdown>
+						### Women Rising
+
+						![Women Rising](img/wr.png)
+					</section>
 				</section>
 
 				<section data-markdown>
@@ -203,6 +299,10 @@
 					- [What Works for Women at Work](http://www.amazon.com/What-Works-Women-Work-Patterns/dp/1479835455)
 					- [Geek Feminism](http://geekfeminism.wikia.com/wiki/Geek_Feminism_Wiki)
 					- [Ashe Dryden](http://www.ashedryden.com/articles)
+				</section>
+
+				<section data-markdown>
+					## Let's Talk
 				</section>
 
 				<section data-markdown>
